ta info på index sidan

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			</div>
 			<div class="rightBlock">
 				<button class="reset">Restart game!</button>
-				<div id="headerMessage"></div>
+				<p class="headerMessage">Game is now restarted!</p>
 			</div>
 		</header>
 
@@ -34,11 +34,12 @@
 				
 			</select></br>
   			<button type="submit" value="Play">Play</button><br><br>
+			<div class="messageBox1"></div>
+			<div class="messageBox2"></div>
 		</form>
 		</main>
-		<header>
-			<div class="messageBox"></div>
-		</header>
+		<footer>
+		</footer>
 	</div>	
 	</body>
 </html>
