--- a/index.html
+++ b/index.html
@@ -33,10 +33,12 @@
 				<option value="Ali">Ali Chef</option>
 				
 			</select></br>
-  			<button type="submit" value="Play">Play</button><br><br>
+  			<button type="submit" value="Play" class="play">Play</button><br><br>
 		</form>
 		<div class="messageBox1"></div>
-		<div class="messageBox2"></div>
+		<div class="tools"></div>
+		<div class="box2"></div>
+		<div class="box4"></div>
 		</main>
 		<footer>
 		</footer>
